--- a/helloworld/hagakuredjango/hagakureapp/templates/voice.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/voice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+ <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset="UTF-8">
   <meta name="description" content="HAGAKURE PROGRAMMING塾のWebページ｜参加者の声を紹介">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,7 +35,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- トップ巻物 -->
   <script src="{% static 'js/top_makimono.js' %}"></script>
 
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
     <meta property="og:url" content="https://hagakurepgm.net/voice">
     <meta property="og:type" content="website">
     <meta property="og:title" content="HAGAKURE_PROGRAMMING塾">
@@ -93,6 +92,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="https://www.facebook.com/102157125979726">FB</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'term_use' %}">規約</a>
                   </li>
               </ul>
             </div>
