'規約の名称変更と流れのタグ変更と黄色マーカー追加'

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -113,7 +113,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a class="nav-link" href="https://www.facebook.com/102157125979726">FB</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'term_use' %}">規約</a>
+                    <a class="nav-link" href="{% url 'term_use' %}">参加規約</a>
                   </li>
               </ul>
             </div>
@@ -311,7 +311,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!--入塾までの流れ ここから-->
     <section class="wrapper_hp nyujuku">
       <div class="container_nyujuku scroll_up">
-        <h2 class="nyujuku_ttl">入塾までの流れ</h2>
+        <!-- 他のタグがh1なのでそろえる。 -->
+        <h1 class="nyujuku_ttl">入塾までの流れ</h1>
         <dl class="nyujuku_flow">
           <div class="flow_contents">
             <div class="contents_num">1</div>
