--- a/helloworld/hagakuredjango/hagakureapp/templates/term_use.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/term_use.html
@@ -99,7 +99,7 @@
                     <a class="nav-link" href="https://www.facebook.com/102157125979726">FB</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'term_use' %}">規約</a>
+                    <a class="nav-link" href="{% url 'term_use' %}">参加規約</a>
                   </li>
               </ul>
             </div>
