--- a/helloworld/hagakuredjango/hagakureapp/templates/voice.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/voice.html
@@ -94,7 +94,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a class="nav-link" href="https://www.facebook.com/102157125979726">FB</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'term_use' %}">規約</a>
+                    <a class="nav-link" href="{% url 'term_use' %}">参加規約</a>
                   </li>
               </ul>
             </div>
