topページ追加

--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -135,6 +135,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="7000">
+            <img src="{% static 'images/topworks.jpg' %}" class="d-block w-100" alt="top_works.jpg">
+          </div>
+          <div class="carousel-item" data-bs-interval="7000">
             <img src="{% static 'images/top1.jpg' %}" class="d-block w-100 top1_image" alt="top1.jpg">
             <div class="carousel-caption">
               <div class="main_title_div">
@@ -182,6 +185,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div id="carouselExampleSlidesOnly2" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="7000">
+            <img src="{% static 'images/top_keitai.jpg' %}" class="w-100" alt="top_keitai.jpg">
+          </div>
+          <div class="carousel-item" data-bs-interval="7000">
             <img src="{% static 'images/kenshi_smartphone.jpg' %}" class="w-100" alt="kenshi.jpg">
           </div>
           <div class="carousel-item matchcoin" data-bs-interval="7000">
@@ -253,7 +259,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </div>
         <div class="osusume_right">
-           <img class="osusume_event_photo" src="{% static 'images/event.jpg' %}" alt="オフラインイベントの様子">
+           <img class="osusume_event_photo" src="{% static 'images/topworks.jpg' %}" alt="オフラインイベントの様子">
         </div>
       </div>
     </div>
