saga_botのbootstrap_jsのタグを追加（スマホサイズでメニューが開かないエラーの解消。）

--- a/helloworld/hagakuredjango/hagakureapp/templates/saga_bot.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/saga_bot.html
@@ -195,6 +195,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         width: 100%;
       }
     </style>
+
   </head>
   
   <body>
@@ -313,6 +314,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         limitTextLength();
       });
     </script>    
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="js/window.js"></script> -->
   </body>
 </html>
