--- a/helloworld/hagakuredjango/hagakureapp/templates/term_use.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/term_use.html
@@ -71,7 +71,7 @@
 
     <header class="wrapper_hp">
         <nav class="navbar navbar-expand-sm navbar-light">
-          <div class="container-fluid menu_container">
+          <div class="container-fluid">
             <a class="navbar-brand" href="/">
               <img src="{% static 'images/logo.png' %}" alt="hagakure_logo" width="30">
             </a>
